llogo_release_v1/src/antlr/LLogoParser.java
// Generated from LLogo.g4 by ANTLR 4.9.1

package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LLogoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT=1, CASE=2, OF=3, PIPE=4, DIV=5, SUB=6, ADD=7, EQ=8, BACKSLASH=9, DOT=10, 
		COMMA=11, LET=12, IN=13, REC=14, FUN=15, TRUE=16, FALSE=17, EQQ=18, AND=19, 
		OR=20, LT=21, GT=22, LTE=23, GTE=24, IF=25, THEN=26, ELSE=27, RIGHTARROW=28, 
		SEMICOLON=29, TYINT=30, TYBOOL=31, LPAREN=32, RPAREN=33, LBRACKET=34, 
		RBRACKET=35, LBRACE=36, RBRACE=37, COLONCOLON=38, COLON=39, RED=40, BLUE=41, 
		GREEN=42, PINK=43, BLACK=44, FORWARD=45, BACKWARD=46, LEFT=47, RIGHT=48, 
		PENUP=49, PENDOWN=50, SETCOL=51, RANDCOL=52, FST=53, SND=54, TYCOLOUR=55, 
		STAR=56, TYUNIT=57, TYCOLOURLIST=58, IDENT=59, WS=60;
	public static final int
		RULE_expr = 0, RULE_base_expr = 1, RULE_list = 2, RULE_app = 3, RULE_prim = 4, 
		RULE_colour = 5, RULE_type = 6, RULE_prim_type = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"expr", "base_expr", "list", "app", "prim", "colour", "type", "prim_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'case'", "'of'", "'|'", "'/'", "'-'", "'+'", "'='", "'\\'", 
			"'.'", "','", "'let'", "'in'", "'rec'", "'fun'", "'true'", "'false'", 
			"'=='", "'&&'", "'||'", "'<'", "'>'", "'<='", "'>='", "'if'", "'then'", 
			"'else'", "'->'", "';'", "'Int'", "'Bool'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "'::'", "':'", "'red'", "'blue'", "'green'", "'pink'", 
			"'black'", "'forward'", "'backward'", "'left'", "'right'", "'penUp'", 
			"'penDown'", "'setCol'", "'randCol'", "'fst'", "'snd'", "'Colour'", "'*'", 
			"'Unit'", "'ColourList'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT", "CASE", "OF", "PIPE", "DIV", "SUB", "ADD", "EQ", "BACKSLASH", 
			"DOT", "COMMA", "LET", "IN", "REC", "FUN", "TRUE", "FALSE", "EQQ", "AND", 
			"OR", "LT", "GT", "LTE", "GTE", "IF", "THEN", "ELSE", "RIGHTARROW", "SEMICOLON", 
			"TYINT", "TYBOOL", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", 
			"RBRACE", "COLONCOLON", "COLON", "RED", "BLUE", "GREEN", "PINK", "BLACK", 
			"FORWARD", "BACKWARD", "LEFT", "RIGHT", "PENUP", "PENDOWN", "SETCOL", 
			"RANDCOL", "FST", "SND", "TYCOLOUR", "STAR", "TYUNIT", "TYCOLOURLIST", 
			"IDENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LLogo.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LLogoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LetRecContext extends ExprContext {
		public TerminalNode LET() { return getToken(LLogoParser.LET, 0); }
		public TerminalNode REC() { return getToken(LLogoParser.REC, 0); }
		public List<TerminalNode> IDENT() { return getTokens(LLogoParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LLogoParser.IDENT, i);
		}
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public List<TerminalNode> COLON() { return getTokens(LLogoParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(LLogoParser.COLON, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public TerminalNode EQ() { return getToken(LLogoParser.EQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IN() { return getToken(LLogoParser.IN, 0); }
		public LetRecContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitLetRec(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LetFunContext extends ExprContext {
		public TerminalNode LET() { return getToken(LLogoParser.LET, 0); }
		public TerminalNode FUN() { return getToken(LLogoParser.FUN, 0); }
		public List<TerminalNode> IDENT() { return getTokens(LLogoParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LLogoParser.IDENT, i);
		}
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public TerminalNode COLON() { return getToken(LLogoParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public TerminalNode EQ() { return getToken(LLogoParser.EQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IN() { return getToken(LLogoParser.IN, 0); }
		public LetFunContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitLetFun(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BaseExprContext extends ExprContext {
		public Base_exprContext base_expr() {
			return getRuleContext(Base_exprContext.class,0);
		}
		public BaseExprContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitBaseExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LetContext extends ExprContext {
		public TerminalNode LET() { return getToken(LLogoParser.LET, 0); }
		public TerminalNode IDENT() { return getToken(LLogoParser.IDENT, 0); }
		public TerminalNode EQ() { return getToken(LLogoParser.EQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IN() { return getToken(LLogoParser.IN, 0); }
		public LetContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitLet(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SequenceContext extends ExprContext {
		public Base_exprContext base_expr() {
			return getRuleContext(Base_exprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(LLogoParser.SEMICOLON, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SequenceContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitSequence(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LetPairContext extends ExprContext {
		public TerminalNode LET() { return getToken(LLogoParser.LET, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public List<TerminalNode> IDENT() { return getTokens(LLogoParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LLogoParser.IDENT, i);
		}
		public TerminalNode COMMA() { return getToken(LLogoParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public TerminalNode EQ() { return getToken(LLogoParser.EQ, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode IN() { return getToken(LLogoParser.IN, 0); }
		public LetPairContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitLetPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new SequenceContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(16);
				base_expr(0);
				setState(17);
				match(SEMICOLON);
				setState(18);
				expr();
				}
				break;
			case 2:
				_localctx = new LetContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(20);
				match(LET);
				setState(21);
				match(IDENT);
				setState(22);
				match(EQ);
				setState(23);
				expr();
				setState(24);
				match(IN);
				setState(25);
				expr();
				}
				break;
			case 3:
				_localctx = new LetFunContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(27);
				match(LET);
				setState(28);
				match(FUN);
				setState(29);
				match(IDENT);
				setState(30);
				match(LPAREN);
				setState(31);
				match(IDENT);
				setState(32);
				match(COLON);
				setState(33);
				type();
				setState(34);
				match(RPAREN);
				setState(35);
				match(EQ);
				setState(36);
				expr();
				setState(37);
				match(IN);
				setState(38);
				expr();
				}
				break;
			case 4:
				_localctx = new LetRecContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(40);
				match(LET);
				setState(41);
				match(REC);
				setState(42);
				match(IDENT);
				setState(43);
				match(LPAREN);
				setState(44);
				match(IDENT);
				setState(45);
				match(COLON);
				setState(46);
				type();
				setState(47);
				match(RPAREN);
				setState(48);
				match(COLON);
				setState(49);
				type();
				setState(50);
				match(EQ);
				setState(51);
				expr();
				setState(52);
				match(IN);
				setState(53);
				expr();
				}
				break;
			case 5:
				_localctx = new LetPairContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				match(LET);
				setState(56);
				match(LPAREN);
				setState(57);
				match(IDENT);
				setState(58);
				match(COMMA);
				setState(59);
				match(IDENT);
				setState(60);
				match(RPAREN);
				setState(61);
				match(EQ);
				setState(62);
				expr();
				setState(63);
				match(IN);
				setState(64);
				expr();
				}
				break;
			case 6:
				_localctx = new BaseExprContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(66);
				base_expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Base_exprContext extends ParserRuleContext {
		public Base_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base_expr; }
	 
		public Base_exprContext() { }
		public void copyFrom(Base_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode ADD() { return getToken(LLogoParser.ADD, 0); }
		public AddContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitAdd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PenDownContext extends Base_exprContext {
		public TerminalNode PENDOWN() { return getToken(LLogoParser.PENDOWN, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public PenDownContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitPenDown(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SubContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode SUB() { return getToken(LLogoParser.SUB, 0); }
		public SubContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitSub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondContext extends Base_exprContext {
		public TerminalNode IF() { return getToken(LLogoParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public Base_exprContext base_expr() {
			return getRuleContext(Base_exprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public List<TerminalNode> LBRACE() { return getTokens(LLogoParser.LBRACE); }
		public TerminalNode LBRACE(int i) {
			return getToken(LLogoParser.LBRACE, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> RBRACE() { return getTokens(LLogoParser.RBRACE); }
		public TerminalNode RBRACE(int i) {
			return getToken(LLogoParser.RBRACE, i);
		}
		public TerminalNode ELSE() { return getToken(LLogoParser.ELSE, 0); }
		public CondContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PenUpContext extends Base_exprContext {
		public TerminalNode PENUP() { return getToken(LLogoParser.PENUP, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public PenUpContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitPenUp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LeftContext extends Base_exprContext {
		public TerminalNode LEFT() { return getToken(LLogoParser.LEFT, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public LeftContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitLeft(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode OR() { return getToken(LLogoParser.OR, 0); }
		public OrContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MulContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode STAR() { return getToken(LLogoParser.STAR, 0); }
		public MulContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitMul(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FstContext extends Base_exprContext {
		public TerminalNode FST() { return getToken(LLogoParser.FST, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public FstContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitFst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SndContext extends Base_exprContext {
		public TerminalNode SND() { return getToken(LLogoParser.SND, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public SndContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitSnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RightContext extends Base_exprContext {
		public TerminalNode RIGHT() { return getToken(LLogoParser.RIGHT, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public RightContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitRight(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LtContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode LT() { return getToken(LLogoParser.LT, 0); }
		public LtContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitLt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode EQQ() { return getToken(LLogoParser.EQQ, 0); }
		public EqContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitEq(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GtContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode GT() { return getToken(LLogoParser.GT, 0); }
		public GtContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitGt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CaseContext extends Base_exprContext {
		public TerminalNode CASE() { return getToken(LLogoParser.CASE, 0); }
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode OF() { return getToken(LLogoParser.OF, 0); }
		public TerminalNode LBRACE() { return getToken(LLogoParser.LBRACE, 0); }
		public TerminalNode LBRACKET() { return getToken(LLogoParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(LLogoParser.RBRACKET, 0); }
		public List<TerminalNode> RIGHTARROW() { return getTokens(LLogoParser.RIGHTARROW); }
		public TerminalNode RIGHTARROW(int i) {
			return getToken(LLogoParser.RIGHTARROW, i);
		}
		public TerminalNode PIPE() { return getToken(LLogoParser.PIPE, 0); }
		public List<TerminalNode> IDENT() { return getTokens(LLogoParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(LLogoParser.IDENT, i);
		}
		public TerminalNode COLONCOLON() { return getToken(LLogoParser.COLONCOLON, 0); }
		public TerminalNode RBRACE() { return getToken(LLogoParser.RBRACE, 0); }
		public CaseContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitCase(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DivContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode DIV() { return getToken(LLogoParser.DIV, 0); }
		public DivContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BackwardContext extends Base_exprContext {
		public TerminalNode BACKWARD() { return getToken(LLogoParser.BACKWARD, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public BackwardContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitBackward(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndContext extends Base_exprContext {
		public List<Base_exprContext> base_expr() {
			return getRuleContexts(Base_exprContext.class);
		}
		public Base_exprContext base_expr(int i) {
			return getRuleContext(Base_exprContext.class,i);
		}
		public TerminalNode AND() { return getToken(LLogoParser.AND, 0); }
		public AndContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForwardContext extends Base_exprContext {
		public TerminalNode FORWARD() { return getToken(LLogoParser.FORWARD, 0); }
		public TerminalNode LPAREN() { return getToken(LLogoParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(LLogoParser.RPAREN, 0); }
		public ForwardContext(Base_exprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LLogoVisitor ) return ((LLogoVisitor<? extends T>)visitor).visitForward(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SetColContext extends Base_exprContext {
		public TerminalNode SETCOL() { return getToken(LLogoParser.SETCOL, 0); }
